fix text overflow on game name

--- a/src/styles/Games.css
+++ b/src/styles/Games.css
@@ -31,7 +31,7 @@ body {
 	position: absolute;
 	margin: 7px;
 	max-width: calc(var(--gameWidth) / 2);
-	max-height: calc(var(--gameHeight) - 14px); /* 14px for the margin (top and bottom)*/
+	height: calc(var(--gameHeight) - 14px); /* 14px for the margin (top and bottom)*/
 	padding: 10px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 	background-color: rgba(0, 0, 0, 0.5);
@@ -44,6 +44,9 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	font-size: calc(var(--gameWidth) / 15);
 	mix-blend-mode: difference;
+	width: calc(var(--gameWidth) - 30px); /* 30px for the margin */
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .fade {
